working on seven integration
